updating orbited config based on http://orbited.org/wiki/Configuration     - epoll is best on linux (see http://twistedmatrix.com/documents/current/core/howto/choosing-reactor.html)     - removing stomp listener since we're using RabbitMQ instead of MorbidQ     - added loglevels

--- a/vcweb/orbited.cfg
+++ b/vcweb/orbited.cfg
@@ -1,9 +1,18 @@
 [listen]
 http://:9000
-stomp://:61613
 
 [access]
 * -> localhost:61613
 
 [global]
 session.ping_interval = 300
+# use epoll on linux, select on windows, kqueue on BSD
+reactor = epoll
+proxy.enabled = 1
+
+[logging]
+debug=SCREEN
+info=SCREEN,/var/log/orbited/info.log
+access=/var/log/orbited/access.log
+warn=/var/log/orbited/error.log
+error=SCREEN,/var/log/orbited/error.log
