adding sentry supervisord and updated apache vhost configs

--- a/deploy/supervisord.conf
+++ b/deploy/supervisord.conf
@@ -3,3 +3,12 @@ directory=/opt/vcweb/
 command=/opt/virtualenvs/vcweb/bin/python /opt/vcweb/vcweb/vcweb-sockjs.py 8882
 autostart=true
 redirect_stderr=true
+
+[program:sentry-web]
+directory=/opt/sentry/
+command=/opt/sentry/bin/sentry --config=/opt/sentry/sentry.conf.py start http
+autostart=true
+autorestart=true
+redirect_stderr=true
+environment=SCRIPT_NAME=sentry
+
