--- a/fabfile.py.template
+++ b/fabfile.py.template
@@ -3,7 +3,10 @@ from fabric.context_managers import settings as fab_settings
 from fabric.contrib import django
 from fabric.contrib.console import confirm
 from fabric.contrib.project import rsync_project
-import os, sys, shutil, logging
+import os
+import sys
+import shutil
+import logging
 
 logger = logging.getLogger(__name__)
 
@@ -17,14 +20,19 @@ env.python = 'python'
 env.project_name = 'vcweb'
 env.deploy_user = 'apache'
 env.deploy_group = 'commons'
-env.virtualenv_path = "%s/.virtualenvs/%s" % (os.getenv("HOME"), env['project_name'])
+env.virtualenv_path = "%s/.virtualenvs/%s" % (
+    os.getenv("HOME"), env['project_name'])
 env.database = 'default'
+# env.virtualenv_path = '/opt/virtualenvs/%(project_name)s' % env
 env.deploy_path = '/opt/'
 env.hosts = ['localhost']
 env.hg_url = 'https://bitbucket.org/virtualcommons/vcweb'
 env.apache = 'httpd'
-# FIXME: use django conf INSTALLED_APPS to introspect instead, similar to experiment_urls
-env.applist = ['vcweb.core', 'vcweb.experiment.forestry', 'vcweb.experiment.bound', 'vcweb.experiment.lighterprints', 'vcweb.experiment.broker']
+# FIXME: use django conf INSTALLED_APPS to introspect instead, similar to
+# experiment_urls
+env.applist = [
+    'vcweb.core', 'vcweb.experiment.forestry', 'vcweb.experiment.bound',
+    'vcweb.experiment.lighterprints', 'vcweb.experiment.broker']
 env.docs_path = os.path.join(env.project_path, 'docs')
 env.remote_docs_path = '/home/csid/public_html/api/vcweb'
 env.testdata_fixtures = 'forestry_experiment_metadata lighterprints_experiment_metadata activities bound_experiment_metadata bound_parameters'
@@ -40,9 +48,9 @@ this currently only works for sqlite3 development database.  do it by hand with
 postgres a few times to figure out what to automate.
 """
 syncdb_commands = [
-        '%(python)s manage.py syncdb --noinput --database=%(database)s' % env,
-        '%(python)s manage.py migrate' % env,
-        ]
+    '%(python)s manage.py syncdb --noinput --database=%(database)s' % env,
+    '%(python)s manage.py migrate' % env,
+]
 
 
 @hosts('csid@commons.asu.edu')
@@ -53,26 +61,36 @@ def docs():
     with cd(env.remote_docs_path):
         run('find . -type d -exec chmod a+rx {} \; && chmod -R a+r .')
 
+
 def testdata():
     syncdb()
     with cd(env.project_path):
-        _virtualenv(local, '%(python)s manage.py loaddata %(testdata_fixtures)s' % env)
-    
+        _virtualenv(
+            local, '%(python)s manage.py loaddata %(testdata_fixtures)s' % env)
+
+
 def migrate():
-    local("{python} manage.py migrate".format(python=env.python), capture=False)
+    local("{python} manage.py migrate".format(
+        python=env.python), capture=False)
+
 
 def clean_update():
     local("hg pull && hg up -C")
+
 
 def cu():
     clean_update()
     migrate()
 
+
 def psh():
-    local("{python} manage.py shell_plus".format(python=env.python), capture=False)
+    local("{python} manage.py shell_plus".format(
+        python=env.python), capture=False)
+
 
 def shell():
     local("{python} manage.py shell".format(python=env.python), capture=False)
+
 
 def syncdb(**kwargs):
     with cd(env.project_path):
@@ -88,7 +106,8 @@ def setup_virtualenv():
         os.makedirs("%(virtualenv_path)s" % env)
     except OSError:
         pass
-    local('virtualenv -p %(python)s --no-site-packages %(virtualenv_path)s' % env)
+    local('virtualenv -p %(python)s --no-site-packages %(virtualenv_path)s' %
+          env)
 
 
 def _virtualenv(executor, *commands, **kwargs):
@@ -99,10 +118,10 @@ def _virtualenv(executor, *commands, **kwargs):
     else:
         return executor(env.command, **kwargs)
 
-def upgradepip():
-    print "This does not work on initial bootstrap, Django must be installed first."
-    ''' looks for requirements.pip in the django project directory '''
-    _virtualenv(local, 'pip install -Ur %(project_path)s/vcweb/requirements.txt' % env)
+
+def host_type():
+    run('uname -a')
+
 
 def test(name=None):
     '''
@@ -114,77 +133,91 @@ def test(name=None):
             env.apps = name
         _virtualenv(local, '%(python)s manage.py test %(apps)s' % env)
 
+
 def sockjs(ip="127.0.0.1", port=None):
     if port is None:
         port = vcweb_settings.WEBSOCKET_PORT
-    _virtualenv(local, "{python} vcweb/vcweb-sockjs.py {port}".format(python=env.python, port=port), capture=False)
+    _virtualenv(local, "{python} vcweb/vcweb-sockjs.py {port}".format(
+        python=env.python, port=port), capture=False)
+
 
 def tornadio(ip="127.0.0.1", port=None):
     if port is None:
         port = vcweb_settings.WEBSOCKET_PORT
-    _virtualenv(local, "{python} vcweb/vcwebio.py {port}".format(python=env.python, port=port), capture=False)
+    _virtualenv(local, "{python} vcweb/vcwebio.py {port}".format(
+        python=env.python, port=port), capture=False)
+
 
 def ssl(ip='127.0.0.1', port=8443):
-    local("{python} manage.py runsslserver {ip}:{port}".format(python=env.python, **locals()), capture=False)
+    local("{python} manage.py runsslserver {ip}:{port}".format(
+        python=env.python, **locals()), capture=False)
+
 
 def server(ip="127.0.0.1", port=8000):
-    local("{python} manage.py runserver {ip}:{port}".format(python=env.python, **locals()), capture=False)
+    local("{python} manage.py runserver {ip}:{port}".format(
+        python=env.python, **locals()), capture=False)
+
 
 def dev():
     env.project_path = env.deploy_path + env.project_name
-    env.hosts =['staging.host']
+    env.hosts = ['staging.server']
+
 
 def prod():
     env.project_path = env.deploy_path + env.project_name
-    env.hosts = ['production.host']
+    env.hosts = ['production.server']
+
 
 def loc():
+    env.deploy_user = 'alllee'
     env.apache = 'apache2'
     env.hosts = ['localhost']
+
 
 def collectstatic():
     local('%(python)s manage.py collectstatic' % env)
 
+
 def setup():
     setup_virtualenv()
-    #sudo('hg clone %(hg_url)s %(deploy_path)s' % env, pty=True, user=env.deploy_user)
-    #sudo_chain('chown -R %(deploy_user)s:%(deploy_group)s %(deploy_path)s' % env,
-    #        'chmod -R ug+rw %(deploy_path)s' % env,
-    #        'find %(deploy_path)s -type d -exec chmod ug+x {} \;' % env,
-    #        pty=True)
     pip()
+
 
 def _restart_command():
     return 'service %(apache)s restart && supervisorctl restart vcweb-sockjs' % env
+
 
 def clean():
     with cd(env.project_path):
         sudo('find . -name "*.pyc" -delete -print')
 
+
 def restart():
     sudo(_restart_command(), pty=True)
 
+
 def sudo_chain(*commands, **kwargs):
     sudo(' && '.join(commands), **kwargs)
+
 
 def deploy():
     """ deploys to an already setup environment """
     if confirm("Deploy to %(hosts)s ?" % env):
         with cd(env.project_path):
             sudo_chain(
-                    'hg pull && hg up -C',
-                    'hg id -n > build-id.txt',
-                    'chmod g+s logs',
-                    'chmod -R g+rw logs/',
-                    user=env.deploy_user, pty=True)
+                'hg pull && hg up -C',
+                'hg id -n > build-id.txt',
+                'chmod g+s logs',
+                'chmod -R g+rw logs/',
+                user=env.deploy_user, pty=True)
             env.static_root = vcweb_settings.STATIC_ROOT
-            _virtualenv(run,'%(python)s manage.py collectstatic' % env)
-            _virtualenv(run,'%(python)s manage.py installtasks' % env)
+            _virtualenv(run, '%(python)s manage.py collectstatic' % env)
+            _virtualenv(run, '%(python)s manage.py installtasks' % env)
             sudo_chain(
-                    'chmod -R ug+rw .',
-                    'find %(static_root)s -type d -exec chmod a+x {} \;' % env,
-                    'find %(static_root)s -type f -exec chmod a+r {} \;' % env,
-                    'find . -type d -exec chmod ug+x {} \;',
-                    'chown -R %(deploy_user)s:%(deploy_group)s . %(static_root)s' % env,
-                    _restart_command(),
-                    pty=True)
+                'chmod -R ug+rw .',
+                'find %(static_root)s -type d -exec chmod a+x {} \;' % env,
+                'find %(static_root)s -type f -exec chmod a+r {} \;' % env,
+                'find . -type d -exec chmod ug+x {} \;',
+                'chown -R %(deploy_user)s:%(deploy_group)s . %(static_root)s' % env,
+                _restart_command(),
+                pty=True)
