refactoring tests, splitting into modules. fabfiles are next to hopefully be able to use fab in drone.io
--HG--
rename : vcweb/core/tests.py => vcweb/core/tests/test_models.py

--- a/fabfile.py.template
+++ b/fabfile.py.template
@@ -53,7 +53,7 @@ syncdb_commands = [
 ]
 
 
-@hosts('csid@commons.asu.edu')
+@hosts('documentation.host')
 def docs():
     with lcd(env.docs_path):
         local("/usr/bin/make html")
