--- a/requirements.txt
+++ b/requirements.txt
@@ -11,24 +11,21 @@ psycopg2
 tornado
 sockjs-tornado
 tornado-redis
-python-memcached
 pylibmc
 south
 # for sentry
 raven
-feedparser
-feedcache
 xlrd
 xlwt
 django-bootstrap3
 django-contact-form
 markdown
 unicodecsv
-pillow
+#pillow
 coverage
 # FIXME: this will fail on Mac OS X, see http://lxml.de/installation.html#macos-x for workarounds.
 # easiest is to use MacPorts, sudo port install py27-lxml beforehand to set up the appropriate xml libraries
-lxml
+#lxml
 git+http://git@github.com/kstateome/django-cas.git@0.9.1#egg=cas
 # for migratespool task
 #mysql-connector-python
