--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ django-bootstrap3
 django-contact-form
 markdown
 unicodecsv
-#pillow
+pillow
 coverage
 # FIXME: this will fail on Mac OS X, see http://lxml.de/installation.html#macos-x for workarounds.
 # easiest is to use MacPorts, sudo port install py27-lxml beforehand to set up the appropriate xml libraries
