--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,8 @@ python:
     - "2.6"
     - "2.7"
 install: "pip install -r requirements.txt"
+before_script:
+    - psql -c 'create user vcweb CREATEDB;' -U postgres
+    - psql -c 'create database vcweb' -U vcweb -d template1
 script: fab test
+env: DB=postgres
