--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ install: "pip install -r requirements.txt"
 before_script:
     - psql -c 'create user vcweb CREATEDB;' -U postgres
     - psql -c 'create database vcweb' -U vcweb -d template1
+    - cp vcweb/settings/local.py.example vcweb/settings/local.py
 script: fab test
 env: DB=postgres
