fixing old reference to python-memcached, using pylibmc cache instead

--- a/vcweb/settings/local.py.example
+++ b/vcweb/settings/local.py.example
@@ -5,7 +5,7 @@ TEMPLATE_DEBUG = DEBUG
 
 CACHES = {
     'default': {
-        'BACKEND': 'django.core.cache.backends.memcached.MemcachedCache',
+        'BACKEND': 'django.core.cache.backends.memcached.PyLibMCCache',
         'LOCATION': '127.0.0.1:11211',
     }
 }
