fixing tests, setup_test_participants now creates demo participants who don't need to be redirected to the account profile to fill out profile info when visiting /dashboard with an incomplete profile.

--- a/requirements.txt
+++ b/requirements.txt
@@ -33,4 +33,4 @@ git+http://git@github.com/kstateome/django-cas.git@0.9.1#egg=cas
 #django-debug-toolbar
 # graph database
 neo4j-embedded
-
+enum34
