--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ coverage
 # FIXME: this will fail on Mac OS X, see http://lxml.de/installation.html#macos-x for workarounds.
 # easiest is to use MacPorts, sudo port install py27-lxml beforehand to set up the appropriate xml libraries
 #lxml
-git+http://git@github.com/kstateome/django-cas.git@0.9.1#egg=cas
+git+http://git@github.com/virtualcommons/django-cas.git#egg=cas
 # for migratespool task
 #mysql-connector-python
 # XXX: not necessary for production
