--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,6 @@ before_script:
     - cp vcweb/settings/local.py.example vcweb/settings/local.py
 script: fab test
 env: DB=postgres
+services:
+    - memcached
+    - redis
