--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,42 @@
-Django
-fabric
-django-autocomplete-light
-django-localflavor
-django-extensions
-django-kronos
-django-model-utils
-django-social-auth
-django-mptt
-psycopg2
-tornado
-sockjs-tornado
-tornado-redis
-pylibmc
-south
-# for sentry
-raven
-xlrd
-xlwt
-django-bootstrap3
-django-contact-form
-markdown
-unicodecsv
-pillow
-coverage
-# FIXME: this will fail on Mac OS X, see http://lxml.de/installation.html#macos-x for workarounds.
-# easiest is to use MacPorts, sudo port install py27-lxml beforehand to set up the appropriate xml libraries
-#lxml
-git+http://git@github.com/virtualcommons/django-cas.git#egg=cas
-# for migratespool task
-#mysql-connector-python
-# XXX: not necessary for production
-#django-debug-toolbar
-# graph database
-neo4j-embedded
-enum34
-python-coveralls
+Django==1.7
+Fabric==1.10.0
+Markdown==2.5
+Pillow==2.5.3
+PyYAML==3.11
+South==1.0
+backports.ssl-match-hostname==3.4.0.2
+certifi==14.05.14
+coverage==3.7.1
+django-autocomplete-light==1.4.14
+django-bootstrap3==4.11.0
+django-cas==0.9.1
+django-contact-form==1.0
+django-extensions==1.4.0
+django-kronos==0.4
+django-localflavor==1.0
+django-model-utils==2.2
+django-mptt==0.6.1
+django-social-auth==0.7.28
+ecdsa==0.11
+enum34==1.0
+httplib2==0.9
+neo4j-embedded==1.6
+oauth2==1.5.211
+paramiko==1.14.1
+psycopg2==2.5.4
+pycrypto==2.6.1
+pylibmc==1.3.0
+python-coveralls==2.4.2
+python-memcached==1.53
+python-openid==2.2.5
+raven==5.0.0
+requests==2.4.1
+sh==1.09
+six==1.8.0
+sockjs-tornado==1.0.1
+tornado==4.0.2
+tornado-redis==2.4.18
+unicodecsv==0.9.4
+wsgiref==0.1.2
+xlrd==0.9.3
+xlwt==0.7.5
