travis-ci notifies googlegroups, s/dev/staging

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,17 @@
 language: python
 python:
     - "2.7"
-install: "pip install -r requirements.txt"
-before_script:
-    - psql -c 'create user vcweb CREATEDB;' -U postgres
-    - psql -c 'create database vcweb' -U vcweb -d template1
-    - cp vcweb/settings/local.py.example vcweb/settings/local.py
-after_success:
-    - coveralls
-script: fab coverage
+notifications:
+    email: virtualcommons-dev@googlegroups.com
 env: DB=postgres
 services:
     - memcached
     - redis
+before_script:
+    - psql -c 'create user vcweb CREATEDB;' -U postgres
+    - psql -c 'create database vcweb' -U vcweb -d template1
+    - cp vcweb/settings/local.py.example vcweb/settings/local.py
+install: "pip install -r requirements.txt"
+script: fab coverage
+after_success:
+    - coveralls
