switch to nginx / uwsgi deployment

--- a/deploy/supervisord/sockjs.ini
+++ b/deploy/supervisord/sockjs.ini
@@ -1,6 +1,6 @@
 [program:vcweb-sockjs]
 directory=/opt/vcweb/
 command=/opt/virtualenvs/vcweb/bin/python /opt/vcweb/vcweb/vcweb-sockjs.py 8882
-user=apache
+user=nginx
 autostart=true
 redirect_stderr=true
