add haproxy config for sockjs
The timeout tunnel directive is essential for maintaining websocket
connections, tune as needed.

also changing vcweb-sockjs to bind to /websocket/participant and
/websocket/experimenter so haproxy can properly dispatch /websocket
requests to them

--- a/deploy/haproxy/haproxy.cfg
+++ b/deploy/haproxy/haproxy.cfg
@@ -24,9 +24,14 @@ defaults
 	option	dontlognull
     option  forwardfor
     option  http-server-close
-        timeout connect 5000
-        timeout client  50000
-        timeout server  50000
+    option  http-pretend-keepalive
+        timeout connect 5s
+        timeout client  30s
+        timeout server  30
+# essential for persistent sockjs connections, see
+# http://cbonte.github.io/haproxy-dconv/configuration-1.5.html#timeout%20tunnel for more information
+        timeout tunnel  1h
+        timeout client-fin 30s
 	errorfile 400 /etc/haproxy/errors/400.http
 	errorfile 403 /etc/haproxy/errors/403.http
 	errorfile 408 /etc/haproxy/errors/408.http
@@ -39,11 +44,14 @@ defaults
 frontend www-http
     bind :80
     reqadd X-Forwarded-Proto:\ http
+    acl is_sockjs path_beg /websocket
     default_backend vcweb
 
 frontend www-https
     bind :443 ssl crt /etc/ssl/local/server.pem
     reqadd X-Forwarded-Proto:\ https
+    acl is_sockjs path_beg /websocket
+    use_backend sockjs if is_sockjs
     default_backend vcweb
 
 backend vcweb
@@ -51,3 +59,6 @@ backend vcweb
 # proxy to local nginx uwsgi app
     server vcweb-nginx 127.0.0.1:8081
 
+backend sockjs
+    timeout server 120s
+    server sockjs-tornado 127.0.0.1:8882
