fix haproxy.cfg server timeout
use_backend sockjs *must* be listed before any use_backend vcweb so that
sockjs requests don't get dispatched to the vcweb app server

--- a/deploy/haproxy/haproxy.cfg
+++ b/deploy/haproxy/haproxy.cfg
@@ -27,35 +27,29 @@ defaults
     option  http-pretend-keepalive
         timeout connect 5s
         timeout client  30s
-        timeout server  30
+        timeout server  30s
 # essential for persistent sockjs connections, see
 # http://cbonte.github.io/haproxy-dconv/configuration-1.5.html#timeout%20tunnel for more information
         timeout tunnel  1h
         timeout client-fin 30s
-	errorfile 400 /etc/haproxy/errors/400.http
-	errorfile 403 /etc/haproxy/errors/403.http
-	errorfile 408 /etc/haproxy/errors/408.http
-	errorfile 500 /etc/haproxy/errors/500.http
-	errorfile 502 /etc/haproxy/errors/502.http
-	errorfile 503 /etc/haproxy/errors/503.http
-	errorfile 504 /etc/haproxy/errors/504.http
 
 
 frontend www-http
     bind :80
     reqadd X-Forwarded-Proto:\ http
     acl is_sockjs path_beg /websocket
+    redirect scheme https code 301 if is_sockjs
     default_backend vcweb
 
 frontend www-https
-    bind :443 ssl crt /etc/ssl/local/server.pem
+    bind :443 ssl crt /etc/ssl/local/vcweb.pem # crt /etc/ssl/local/another-https-server.pem
     reqadd X-Forwarded-Proto:\ https
     acl is_sockjs path_beg /websocket
     use_backend sockjs if is_sockjs
     default_backend vcweb
 
 backend vcweb
-    redirect scheme https if !{ ssl_fc }
+    redirect scheme https code 301 if !{ ssl_fc }
 # proxy to local nginx uwsgi app
     server vcweb-nginx 127.0.0.1:8081
 
