add uwsgi ini file to simplify supervisord setup

--- a/deploy/supervisord/vcweb-uwsgi.ini
+++ b/deploy/supervisord/vcweb-uwsgi.ini
@@ -1,6 +1,6 @@
 [program:vcweb-uwsgi]
 directory=/opt/vcweb/
-command=/opt/virtualenvs/vcweb/bin/uwsgi --socket /opt/vcweb/uwsgi.sock --wsgi-file /opt/vcweb/vcweb/wsgi.py --master --processes 4 --threads 2 --stats 127.0.0.1:9191
+command=/opt/virtualenvs/vcweb/bin/uwsgi /opt/vcweb/deploy/uwsgi/vcweb.ini
 user=vcweb
 autostart=true
 redirect_stderr=true
