--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ six==1.8.0
 sockjs-tornado==1.0.1
 tornado==4.0.2
 tornado-redis==2.4.18
+redis==2.10.3
 unicodecsv==0.9.4
 wsgiref==0.1.2
 xlrd==0.9.3
