minor formatting / renaming

--- a/deploy/supervisord/sockjs.ini
+++ b/deploy/supervisord/sockjs.ini
@@ -1,6 +1,6 @@
 [program:vcweb-sockjs]
 directory=/opt/vcweb/
-command=/opt/virtualenvs/vcweb/bin/python /opt/vcweb/vcweb/vcweb-sockjs.py 8882
-user=nginx
+command=/opt/virtualenvs/vcweb/bin/python /opt/vcweb/vcweb/sockjs-redis.py 8882
+user=vcweb
 autostart=true
 redirect_stderr=true
