update example haproxy config, disabling sslv3

--- a/deploy/haproxy/haproxy.cfg
+++ b/deploy/haproxy/haproxy.cfg
@@ -25,24 +25,24 @@ defaults
     option  forwardfor
     option  http-server-close
     option  http-pretend-keepalive
-        timeout connect 5s
-        timeout client  30s
-        timeout server  30s
+    timeout connect 5s
+    timeout client  30s
+    timeout server  30s
 # essential for persistent sockjs connections, see
 # http://cbonte.github.io/haproxy-dconv/configuration-1.5.html#timeout%20tunnel for more information
-        timeout tunnel  1h
-        timeout client-fin 30s
+    timeout tunnel  1h
+    timeout client-fin 30s
 
 
 frontend www-http
     bind :80
     reqadd X-Forwarded-Proto:\ http
     acl is_sockjs path_beg /websocket
-    redirect scheme https code 301 if is_sockjs
+    use_backend sockjs if is_sockjs
     default_backend vcweb
 
 frontend www-https
-    bind :443 ssl crt /etc/ssl/local/vcweb.pem # crt /etc/ssl/local/another-https-server.pem
+    bind :443 ssl crt /etc/ssl/local/vcweb.pem no-sslv3 # crt /etc/ssl/local/another-https-server.pem
     reqadd X-Forwarded-Proto:\ https
     acl is_sockjs path_beg /websocket
     use_backend sockjs if is_sockjs
