--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-kronos==0.5
 django-localflavor==1.1
 django-model-utils==2.2
 django-mptt==0.6.1
+django-redis==3.8.2
 django-social-auth==0.7.28
 ecdsa==0.11
 enum34==1.0.4
@@ -22,9 +23,7 @@ oauth2==1.5.211
 paramiko==1.14.1
 psycopg2==2.5.4
 pycrypto==2.6.1
-pylibmc==1.4.1
 python-coveralls==2.4.3
-python-memcached==1.53
 python-openid==2.2.5
 raven==5.1.1
 requests==2.5.1
