update sphinx docs and minor travis build tweaks

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
+sudo: false
 python:
     - "2.7"
 notifications:
@@ -7,9 +8,7 @@ env: DB=postgres
 services:
     - redis
 before_script:
-    - psql -c 'create user vcweb CREATEDB;' -U postgres
-    - psql -c 'create database vcweb' -U vcweb -d template1
-    - cp vcweb/settings/local.py.example vcweb/settings/local.py
+    - fab setup
 install: "pip install -r requirements.txt"
 script: fab coverage
 after_success:
