--- a/requirements.txt
+++ b/requirements.txt
@@ -2,38 +2,39 @@ Django==1.8.4
 Fabric==1.10.2
 Markdown==2.6.2
 PyYAML==3.11
-certifi==2015.04.28
-coverage==3.7.1
-django-autocomplete-light==2.2.5
+coverage==4.0
+django-autocomplete-light==2.2.8
 django-bootstrap3==6.2.2
 django-contact-form==1.1
-django-extensions==1.5.6
+django-extensions==1.5.7
 django-kronos==0.8
 django-localflavor==1.1
 django-model-utils==2.3.1
 django-mptt==0.7.4
 django-redis==4.2.0
+django-rest-framework==3.2.4
 django-social-auth==0.7.28
 ecdsa==0.13
 enum34==1.0.4
-httplib2==0.9.1
+httplib2==0.9.2
 oauth2==1.5.211
 paramiko==1.15.2
 psycopg2==2.6.1
 pycrypto==2.6.1
 python-coveralls==2.5.0
 python-openid==2.2.5
-raven==5.5.0
+raven==5.7.2
 requests==2.7.0
-sockjs-tornado==1.0.1
+sockjs-tornado==1.0.2
 tornado==4.2.1
 tornado-redis==2.4.18
 redis==2.10.3
-unicodecsv==0.13.0
+unicodecsv==0.14.1
 wsgiref==0.1.2
 xlrd==0.9.4
 xlwt==1.0.0
 dealer==2.0.4
 uwsgi==2.0.11.1
+certifi
 # virtualcommons forked django-cas
 git+http://git@github.com/virtualcommons/django-cas.git#egg=cas
