--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,8 @@ django-localflavor==1.1
 django-model-utils==2.3.1
 django-mptt==0.7.4
 django-redis==4.2.0
-django-rest-framework==3.2.4
 django-social-auth==0.7.28
+djangorestframework==3.2.4
 ecdsa==0.13
 enum34==1.0.4
 httplib2==0.9.2
