--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,11 @@ python:
 notifications:
     email: virtualcommons-dev@googlegroups.com
 env: DB=postgres
+addons:
+    postgresql: "9.4"
 services:
     - redis
+    - postgresql
 before_script:
     - fab setup
 install: "pip install -r requirements.txt"
