--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ services:
     - postgresql
 before_script:
     - fab setup
-install: "pip install -r requirements.txt"
+install: "pip install -q -r requirements.txt"
 script: fab coverage
 after_success:
     - coveralls
