add logging to uwsgi
[skip ci]

--- a/deploy/uwsgi/vcweb.ini
+++ b/deploy/uwsgi/vcweb.ini
@@ -1,6 +1,8 @@
 [uwsgi]
 socket = /opt/vcweb/uwsgi.sock
 wsgi-file = /opt/vcweb/vcweb/wsgi.py
+logger = file:/opt/vcweb/logs/uwsgi-error.log
+req-logger = file:/opt/vcweb/logs/uwsgi-req.log
 processes = 4
 threads = 2
 stats = 127.0.0.1:9191
