--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Fabric==1.14.0
 Markdown==2.6.10
 PyYAML==3.12
 coverage==4.4.2
-django-autocomplete-light==2.3.1
+django-autocomplete-light==3.2.10
 django-bootstrap3==9.1.0
 django-contact-form==1.4.2
 django-extensions==1.9.8
@@ -15,8 +15,9 @@ django-redis==4.8.0
 ecdsa==0.13
 enum34==1.1.6
 httplib2==0.10.3
+ipython
 oauth2
-psycopg2==2.7.3.2
+psycopg2==2.7.4
 python-coveralls==2.9.1
 raven==6.4.0
 requests==2.18.4
