--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-autocomplete-light==3.2.10
 django-bootstrap3==9.1.0
 django-contact-form==1.4.2
 django-extensions==1.9.8
+djangorestframework==3.7.7
 django-kronos==1.0
 django-localflavor==2.0
 django-model-utils==3.0.0
