--- a/requirements.txt
+++ b/requirements.txt
@@ -6,16 +6,14 @@ coverage==4.4.2
 django-autocomplete-light==3.2.10
 django-bootstrap3==9.1.0
 django-contact-form==1.4.2
+django-crontab==0.7.1
 django-extensions==1.9.8
-djangorestframework==3.7.7
-django-kronos==1.0
 django-localflavor==2.0
 django-model-utils==3.0.0
 django-mptt==0.9.0
 django-redis==4.8.0
+djangorestframework==3.7.7
 ecdsa==0.13
-enum34==1.1.6
-httplib2==0.10.3
 ipython
 oauth2
 psycopg2==2.7.4
