separate dev + prod dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,27 @@
 Django<1.12
-Fabric==1.14.0
-Markdown==2.6.10
-PyYAML==3.12
-coverage==4.4.2
-django-autocomplete-light==3.2.10
-django-bootstrap3==9.1.0
-django-contact-form==1.4.2
+Markdown==3.0.1
+django-autocomplete-light==3.3.2
+django-bootstrap3==11.0.0
+django-contact-form==1.6
 django-crontab==0.7.1
-django-extensions==1.9.8
-django-localflavor==2.0
-django-model-utils==3.0.0
-django-mptt==0.9.0
-django-redis==4.8.0
+django-extensions==2.1.3
+django-localflavor==2.1
+django-model-utils==3.1.2
+django-mptt==0.9.1
+django-redis==4.9.0
 djangorestframework==3.7.7
-ipython
-oauth2
-psycopg2-binary
-python-coveralls==2.9.1
-raven==6.4.0
+psycopg2-binary==2.7.6.1
+raven==6.9.0
 requests==2.20.1
-sockjs-tornado==1.0.3
+sockjs-tornado==1.0.6
 pillow==5.0.0
-tornado==4.5.2
+tornado==5.1.1
 tornado-redis==2.4.18
-redis==2.10.6
+redis==3.0.1
 unicodecsv==0.14.1
 xlrd==1.1.0
 xlwt==1.3.0
-dealer==2.0.5
-uwsgi==2.0.15
-# virtualcommons forked django-cas
-git+https://git@github.com/virtualcommons/django-cas.git#egg=cas
+dealer==2.1.0
+uwsgi==2.0.17.1
+# forked django-cas from @tgpatel, should see if we still need this
+django-cas-client==1.4.0
