--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,8 +1,7 @@
 -r requirements.txt
 # development dependencies
+fabric
 django-sslserver
 django-debug-toolbar
-coverage==4.4.2
 ipython
-python-coveralls==2.9.1
-
+python-coveralls
