--- a/requirements.txt
+++ b/requirements.txt
@@ -9,12 +9,12 @@ django-localflavor==2.1
 django-model-utils==3.1.2
 django-mptt==0.9.1
 django-redis==4.9.0
-djangorestframework==3.7.7
+djangorestframework==3.9.0
 psycopg2-binary==2.7.6.1
 raven==6.9.0
 requests==2.20.1
 sockjs-tornado==1.0.6
-pillow==5.0.0
+pillow==5.3.0
 tornado==5.1.1
 tornado-redis==2.4.18
 redis==3.0.1
@@ -23,5 +23,5 @@ xlrd==1.1.0
 xlwt==1.3.0
 dealer==2.1.0
 uwsgi==2.0.17.1
-# forked django-cas from @tgpatel, should see if we still need this
+# forked django-cas from @tgpatel, testing need
 django-cas-client==1.4.0
