--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+dealer==2.1.0
 Django<1.12
-Markdown==3.0.1
 django-autocomplete-light==3.3.2
 django-bootstrap3==11.0.0
+# forked django-cas from @tgpatel, testing need
+django-cas-client==1.4.0
 django-contact-form==1.6
 django-crontab==0.7.1
 django-extensions==2.1.3
@@ -10,18 +12,17 @@ django-model-utils==3.1.2
 django-mptt==0.9.1
 django-redis==4.9.0
 djangorestframework==3.9.0
+Markdown==3.0.1
 psycopg2-binary==2.7.6.1
 raven==6.9.0
 requests==2.20.1
 sockjs-tornado==1.0.6
 pillow==5.3.0
+invoke
 tornado==5.1.1
 tornado-redis==2.4.18
 redis==2.10.6
 unicodecsv==0.14.1
+uwsgi==2.0.17.1
 xlrd==1.1.0
 xlwt==1.3.0
-dealer==2.1.0
-uwsgi==2.0.17.1
-# forked django-cas from @tgpatel, testing need
-django-cas-client==1.4.0
