--- a/deploy/nginx/nginx-staging.conf
+++ b/deploy/nginx/nginx-staging.conf
@@ -15,7 +15,7 @@ http {
     sendfile on;
     gzip_static on;
     keepalive_timeout 65;
-    set_real_ip_from    172.18.0.0/24;
+    set_real_ip_from    192.168.132.14;
     real_ip_header      X-Forwarded-For;
     real_ip_recursive   on;
 
@@ -25,10 +25,20 @@ http {
 
     server {
         listen      80;
-        server_name commons.asu.edu;
+        server_name dev.vcweb.asu.edu
         root /srv;
         client_max_body_size    100M;
+        location /conference {
+            try_files $uri $uri/ @proxy_to_app;
+        }
         location / {
+            allow 129.219.0.0/16; # ASU static IPs
+            allow 149.169.0.0/16; # ASU dhcp IPs
+            allow 72.201.1.0/24;
+            allow 72.211.20.0/24;
+            allow 206.167.182.185; # comses east
+            allow 63.143.42.252; # uptimerobot
+            deny all;
             # check for static files first, otherwise proxy to app
             try_files $uri /static/favicon/$uri @proxy_to_app;
         }
@@ -37,8 +47,6 @@ http {
             uwsgi_pass          app_server;
             proxy_set_header    Host        $host;
             proxy_set_header    X-Real-IP   $remote_addr;
-            proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header    X-Forwarded-Proto https;
         }
         access_log /var/log/nginx/access.log;
         error_log /var/log/nginx/error.log;
