fix volume mounts for logging + nginx conf error

--- a/deploy/nginx/nginx-staging.conf
+++ b/deploy/nginx/nginx-staging.conf
@@ -1,7 +1,7 @@
 worker_processes auto;
 user        root;
 pid         /shared/sockets/nginx.pid;
-error_log   /var/log/nginx/error.log;
+error_log   /shared/logs/nginx-error.log;
 
 events {
     worker_connections 1024;
@@ -11,7 +11,7 @@ events {
 http {
     include mime.types;
     default_type application/octet-stream;
-    access_log  /var/log/nginx/access.log combined;
+    access_log  /shared/logs/nginx-access.log combined;
     sendfile on;
     gzip_static on;
     keepalive_timeout 65;
@@ -25,20 +25,13 @@ http {
 
     server {
         listen      80;
-        server_name dev.vcweb.asu.edu
+        server_name dev.vcweb.asu.edu;
         root /srv;
         client_max_body_size    100M;
         location /conference {
             try_files $uri $uri/ @proxy_to_app;
         }
         location / {
-            allow 129.219.0.0/16; # ASU static IPs
-            allow 149.169.0.0/16; # ASU dhcp IPs
-            allow 72.201.1.0/24;
-            allow 72.211.20.0/24;
-            allow 206.167.182.185; # comses east
-            allow 63.143.42.252; # uptimerobot
-            deny all;
             # check for static files first, otherwise proxy to app
             try_files $uri /static/favicon/$uri @proxy_to_app;
         }
@@ -48,7 +41,7 @@ http {
             proxy_set_header    Host        $host;
             proxy_set_header    X-Real-IP   $remote_addr;
         }
-        access_log /var/log/nginx/access.log;
-        error_log /var/log/nginx/error.log;
+        access_log /shared/logs/nginx-access.log;
+        error_log /shared/logs/nginx-error.log;
     }
 }
