--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-extensions==2.1.3
 django-localflavor==2.1
 django-model-utils==3.1.2
 django-mptt==0.9.1
+django-recaptcha==1.4.0
 django-redis==4.9.0
 djangorestframework==3.9.0
 Markdown==3.0.1
