--- a/deploy/nginx/nginx-haproxy.conf
+++ b/deploy/nginx/nginx-haproxy.conf
@@ -1,7 +1,7 @@
 worker_processes auto;
 user        root;
 pid         /shared/sockets/nginx.pid;
-error_log   /var/log/nginx/error.log;
+error_log   /shared/logs/nginx/error.log;
 
 events {
     worker_connections 1024;
@@ -26,7 +26,7 @@ http {
     server {
         listen      80;
         server_name commons.asu.edu;
-        root /srv;
+        root /shared/srv;
         client_max_body_size    100M;
         location / {
             # check for static files first, otherwise proxy to app
@@ -40,7 +40,7 @@ http {
             proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header    X-Forwarded-Proto https;
         }
-        access_log /var/log/nginx/access.log;
-        error_log /var/log/nginx/error.log;
+        access_log /shared/logs/nginx/access.log;
+        error_log /shared/logs/nginx/error.log;
     }
 }
