fix shared paths
still a little bit messy but nginx now expects /shared/logs,
/shared/srv, and /shared/sockets to exist. sockets is still a docker
managed volume, but could probably be moved to a fs volume for
consistency

--- a/prod.yml
+++ b/prod.yml
@@ -20,7 +20,7 @@ services:
     volumes:
       - ./deploy/nginx/nginx-haproxy.conf:/etc/nginx/nginx.conf
       - ./deploy/nginx/uwsgi_params:/etc/nginx/uwsgi_params
-      - ./docker/shared/srv:/srv/
+      - ./docker/shared/:/shared/
       - sockets:/shared/sockets
     command: ["nginx", "-g", "daemon off;"]
     ports:
