fix shared fs mounts in staging conf

--- a/deploy/nginx/nginx-staging.conf
+++ b/deploy/nginx/nginx-staging.conf
@@ -26,14 +26,14 @@ http {
     server {
         listen      80;
         server_name dev.vcweb.asu.edu;
-        root /srv;
+        root /shared/srv;
         client_max_body_size    100M;
         location /conference {
             try_files $uri $uri/ @proxy_to_app;
         }
         location / {
             # check for static files first, otherwise proxy to app
-            try_files $uri /static/favicon/$uri @proxy_to_app;
+            try_files $uri /shared/srv/static/favicon/$uri @proxy_to_app;
         }
         location @proxy_to_app {
             include             /etc/nginx/uwsgi_params;
