add explicit robots.txt alias to nginx

--- a/deploy/nginx/nginx-haproxy.conf
+++ b/deploy/nginx/nginx-haproxy.conf
@@ -28,9 +28,12 @@ http {
         server_name commons.asu.edu;
         root /shared/srv;
         client_max_body_size    100M;
+        location /robots.txt {
+            alias /shared/srv/static/;
+        }
         location / {
             # check for static files first, otherwise proxy to app
-            try_files $uri /static/favicon/$uri @proxy_to_app;
+            try_files $uri /shared/srv/static/favicon/$uri @proxy_to_app;
         }
         location @proxy_to_app {
             include             /etc/nginx/uwsgi_params;
