--- a/deploy/db/autopostgresqlbackup.conf
+++ b/deploy/db/autopostgresqlbackup.conf
@@ -29,7 +29,7 @@ USERNAME=vcweb
 DBHOST=db
 
 # List of DBNAMES for Daily/Weekly Backup e.g. "DB1 DB2 DB3"
-DBNAMES="vcweb
+DBNAMES="vcweb"
 
 # pseudo database name used to dump global objects (users, roles, tablespaces)
 GLOBALS_OBJECTS="postgres_globals"
