--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,25 @@
 dealer==2.1.0
 Django<1.12
 django-autocomplete-light==3.2.10
-django-bootstrap3==11.0.0
-django-cas-client==1.5.0
-django-contact-form==1.7
+django-bootstrap3==12.1.0
+django-cas-client==1.5.3
+django-contact-form==1.8.1
 django-crontab==0.7.1
-django-extensions==2.1.7
-django-localflavor==2.2
-django-model-utils==3.1.2
-django-mptt==0.10.0
-django-recaptcha==2.0.4
-django-redis==4.10.0
-djangorestframework==3.9.4
-Markdown==3.1.1
-psycopg2-binary==2.8.2
-raven==6.9.0
-requests==2.22.0
-sockjs-tornado==1.0.6
-pillow==6.2.0
+django-extensions==2.2.9
+django-localflavor==3.0.1
+django-model-utils==4.0.0
+django-mptt==0.11.0
+django-recaptcha==2.0.6
+django-redis==4.12.1
+djangorestframework==3.11.0
+Markdown==3.2.2
+psycopg2-binary==2.8.5
+requests==2.23.0
+sockjs-tornado==1.0.7
+pillow>=6.2.2
 invoke
 tornado==5.1.1
 tornado-redis==2.4.18
-redis==3.0.1
 unicodecsv==0.14.1
 uwsgi==2.0.18
 xlrd==1.2.0
