deps: pin django-debug-toolbar for compatibility
should upgrade to django 2.2+ and eventually django 3

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,6 @@
 -r requirements.txt
 # development dependencies
 django-sslserver
-django-debug-toolbar
+django-debug-toolbar==2.2
 ipython
 python-coveralls
